# claude-code-second-screen

./: .gitignore  README.md  pyproject.toml
agent_dashboard/: __main__.py  app.py  fonts.py
agent_dashboard/lcd/: output.py
agent_dashboard/telemetry/: claude_code.py  codex.py  demo.py  types.py
agent_dashboard/themes/: matrix.py  matrix_fx.py
docs/: pipeline.html
macos/: .gitignore  README.md  project.yml
macos/Resources/: Info.plist  NeoDashboard.Debug.entitlements
macos/Sources/NeoDashboard/: NeoDashboardApp.swift
macos/Sources/NeoDashboard/App/: AppEnvironment.swift  FrameLoop.swift  MenuBarController.swift  UserPrefs.swift
macos/Sources/NeoDashboard/LCD/: LCDOutput.swift  TRCCFraming.swift  TrofeoVisionDriver.swift
macos/Sources/NeoDashboard/Render/: AnimalCrossingRenderer.swift  CRTPostProcessor.swift  ClockRenderer.swift  FrameRenderer.swift  ImageRenderer.swift  JPEGEncoder.swift  MatrixRenderer.swift  MatrixTheme.swift  RainPainter.swift
macos/Sources/NeoDashboard/Telemetry/: AutoTelemetrySource.swift  ClaudeCodeSource.swift  ClaudePlan.swift  CodexSource.swift  DemoSource.swift  Models.swift  SessionDiscovery.swift  WeatherService.swift
macos/Sources/NeoDashboard/UI/: ConfigPanel.swift  MenuBarContent.swift  PreviewWindow.swift
macos/Sources/TrofeoVision/: TrofeoVisionApp.swift
macos/Sources/TrofeoVision/App/: AppEnvironment.swift  FrameLoop.swift  MenuBarController.swift
macos/Sources/TrofeoVision/LCD/: TrofeoVisionDriver.swift
macos/Sources/TrofeoVision/Render/: AnimalCrossingRenderer.swift  ClockRenderer.swift  MatrixTheme.swift  (+3 more)
(+9 files in other folders)
